--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ img{
     border-radius: 30px;
     /* font-weight:bold; */
     /* font-size:14px; */
-    margin:0 20px 0 0;
+    /* margin:0 20px 0 0; */
     cursor:pointer;
 }
 
@@ -203,6 +203,7 @@ border-radius: 16px;
     margin-top:60px;
     gap:320px;
     justify-content:flex-end;
+    align-items: center;
 }
 
 .review_box .review_footer .review_footer_content,
@@ -223,4 +224,11 @@ border-radius: 16px;
     display: flex;
     justify-content:space-between;
     align-items: center;
+}
+.footer_content{
+width: 40%;
+text-align: left;
+}
+.footer_images{
+    width:30%;
 }
