--- a/style.css
+++ b/style.css
@@ -89,15 +89,9 @@ img{
 }
 
 .white_btn{
-    /* background-color: #FFFFFF; */
-    /* height:50px;
-    width:145px; */
     padding:16px 32px;
     border:2px solid #872BFF;
     border-radius: 30px;
-    /* font-weight:bold; */
-    /* font-size:14px; */
-    /* margin:0 20px 0 0; */
     cursor:pointer;
 }
 
@@ -228,6 +222,7 @@ border-radius: 16px;
 .footer_content{
 width: 40%;
 text-align: left;
+font-size:28px;
 }
 .footer_images{
     width:30%;
